# Consolebot_poetry_docker

./: Dockerfile  classes.py  func.py  main.py  pyproject.toml
