[tool.poetry]
name = "consolebote"
version = "2.1.0"
description = ""
authors = ["Imukr <i0979887766@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"



[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
